--- a/Business_Model.ipynb
+++ b/Business_Model.ipynb
@@ -130,6 +130,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-15T03:20:20.652718Z",
+     "start_time": "2020-10-15T03:20:20.643627Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 2, 2, 1, 2, 2, 1, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random \n",
+    "\n",
+    "my_list = []\n",
+    "for i in range(20): \n",
+    "    my_list.append(random.randint(1,2))\n",
+    "print(my_list)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-15T03:20:11.159977Z",
+     "start_time": "2020-10-15T03:20:11.142695Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 2, 2, 1, 2, 2, 2, 1, 2, 1, 2, 2, 2, 1, 1, 2, 2, 2, 2, 2, 2, 2, 1, 2, 1, 1, 2, 2, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list_2 = [1,2,2,2,1,2,2,2,1,2,1,2,2,2,1,1,2,2,2,2,2,2,2,1,2,1,1,2,2,1,1,1,1,2,1,1,1,1,1,2,1,1,2,1,1,1,1,1,1]\n",
+    "print(my_list_2)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
