Added Db Query capabilities to Business_Model

--- a/Business_Model.ipynb
+++ b/Business_Model.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-20T03:03:24.892817Z",
+     "start_time": "2020-10-20T03:03:24.887217Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,7 +24,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-15T03:20:20.652718Z",
-     "start_time": "2020-10-15T03:20:20.643627Z"
+     "end_time": "2020-10-20T19:53:23.442478Z",
+     "start_time": "2020-10-20T19:53:22.298798Z"
     }
    },
    "outputs": [
@@ -142,27 +156,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 2, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 2, 2, 1, 2, 2, 1, 1, 2]\n"
+      "[{'count(*)': 46558}]\n",
+      "[{'count(DISTINCT question)': 43849}]\n",
+      "\u001b[94mreddit    \u001b[0mWhat the heck is Steampunk anyway ?\n",
+      "\u001b[94mreddit    \u001b[0mAutodidact2@lgbt \"Who opposes gay rights? Muslims and Russians.\"\n",
+      "\u001b[94mreddit    \u001b[0mWeekly /r/Gamecube Discussion (October 18, 2020) - What have you been playing, and what do you think of it?\n",
+      "\u001b[94mreddit    \u001b[0mHoly grail? (Sealed copy of skies of Arcadia)\n",
+      "\u001b[94mreddit    \u001b[0mWhy are the Pearl White controllers so expensive in the US?\n",
+      "\u001b[94mreddit    \u001b[0mPossible to fix wanky RGB SCART cable?\n",
+      "\u001b[94mreddit    \u001b[0mWhy doesnt skies of Arcadia have a strip seal. Almost every GameCube game in Europe either has a strip or a red strip seal, so why doesnt this game ?\n",
+      "\u001b[94mreddit    \u001b[0mGC had these decals now it’s darker around the edges, any advice on restoring?\n",
+      "\u001b[94mreddit    \u001b[0mDoes anyone have a copy of Splinter Cell Chaos Theory who can give me the case & manual (no discs) for a few bucks?\n",
+      "\u001b[94mreddit    \u001b[0mCan you convince me to not sell my Wavebird controller?\n"
      ]
     }
    ],
    "source": [
-    "import random \n",
+    "import pymysql\n",
+    "from ques_db import ques_db, Table \n",
+    "import time \n",
     "\n",
-    "my_list = []\n",
-    "for i in range(20): \n",
-    "    my_list.append(random.randint(1,2))\n",
-    "print(my_list)\n",
-    "    "
+    "db = ques_db() \n",
+    "    \n",
+    "def get_table_size(db, table_name):\n",
+    "    db.cursor.execute('SELECT count(*) FROM `' + table_name + '`;')\n",
+    "    return db.cursor.fetchall()\n",
+    "\n",
+    "print(get_table_size(db, 'scrapes'))\n",
+    "\n",
+    "def get_unique_question_count(db, table_name):\n",
+    "    db.cursor.execute('SELECT count(DISTINCT question) FROM `' + table_name + '`;')\n",
+    "    return db.cursor.fetchall()\n",
+    "\n",
+    "print(get_unique_question_count(db, 'scrapes'))\n",
+    "\n",
+    "\n",
+    "def get_recent_scrapes(db):\n",
+    "    db.cursor.execute('''SELECT * FROM `scrapes` \n",
+    "                     ORDER BY Timestamp DESC\n",
+    "                     LIMIT 10 \n",
+    "                      ''')\n",
+    "    return db.cursor.fetchall()\n",
+    "\n",
+    "class bcolors:\n",
+    "    HEADER = '\\033[95m'\n",
+    "    OKBLUE = '\\033[94m'\n",
+    "    OKCYAN = '\\033[96m'\n",
+    "    OKGREEN = '\\033[92m'\n",
+    "    WARNING = '\\033[93m'\n",
+    "    FAIL = '\\033[91m'\n",
+    "    ENDC = '\\033[0m'\n",
+    "    BOLD = '\\033[1m'\n",
+    "    UNDERLINE = '\\033[4m'\n",
+    "    \n",
+    "   \n",
+    "rows = get_recent_scrapes(db)\n",
+    "\n",
+    "for row in rows: \n",
+    "    print(str(bcolors.OKBLUE + '{:<10}'+ bcolors.ENDC + '{:>15}').format(row['website'], row['question']))\n",
+    " \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-15T03:20:11.159977Z",
-     "start_time": "2020-10-15T03:20:11.142695Z"
+     "end_time": "2020-10-20T02:58:15.546554Z",
+     "start_time": "2020-10-20T02:56:29.437475Z"
     }
    },
    "outputs": [
@@ -170,14 +232,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 2, 2, 1, 2, 2, 2, 1, 2, 1, 2, 2, 2, 1, 1, 2, 2, 2, 2, 2, 2, 2, 1, 2, 1, 1, 2, 2, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 1, 1]\n"
+      "[{'id': 33469, 'question': 'Are You Fucking Kidding Me Right Now?', 'website': 'reddit', 'topic': '2b2t', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33470, 'question': 'Cryptocurrency - is this the end game for fintech?', 'website': 'reddit', 'topic': 'cryptochat', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33471, 'question': 'Chinas ICO bans - what befalls the world of cryptocurrencies?', 'website': 'reddit', 'topic': 'cryptochat', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33472, 'question': 'Is the consensus still that cloud mining is a scam?', 'website': 'reddit', 'topic': 'cryptochat', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33473, 'question': 'Comment active est ce subreddit ?', 'website': 'reddit', 'topic': 'canada_fr', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33474, 'question': 'Anyone know how far the new water pipe is running on Lovett?', 'website': 'reddit', 'topic': 'CityofCentral', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33475, 'question': 'Dream house or nope house? • /r/pics', 'website': 'reddit', 'topic': 'IdeaInspire', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33461, 'question': 'Can we merge Accumulo and Hadoop back together?', 'website': 'reddit', 'topic': 'Accumulo', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 55, 46)}, {'id': 33462, 'question': 'How did you learn to read and type?', 'website': 'reddit', 'topic': 'TalkToDolphins', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 55, 46)}, {'id': 33463, 'question': 'Do you have a favorite flavor of water?', 'website': 'reddit', 'topic': 'TalkToDolphins', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 55, 46)}]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-25c10d6f8a48>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mrun_periodically\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-11-25c10d6f8a48>\u001b[0m in \u001b[0;36mrun_periodically\u001b[0;34m(wait_time)\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mclear_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mget_recent_scrapes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mrun_periodically\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "my_list_2 = [1,2,2,2,1,2,2,2,1,2,1,2,2,2,1,1,2,2,2,2,2,2,2,1,2,1,1,2,2,1,1,1,1,2,1,1,1,1,1,2,1,1,2,1,1,1,1,1,1]\n",
-    "print(my_list_2)\n",
-    "        "
+    "from IPython.display import clear_output\n",
+    "\n",
+    "def run_periodically(wait_time):\n",
+    "    while True: \n",
+    "        clear_output(wait=True)\n",
+    "        print(get_recent_scrapes())\n",
+    "        time.sleep(wait_time)\n",
+    "    \n",
+    "run_periodically(60)"
    ]
   },
   {
