Reupload Business_Model.ipynb

--- a/Business_Model.ipynb
+++ b/Business_Model.ipynb
@@ -144,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T19:53:23.442478Z",
-     "start_time": "2020-10-20T19:53:22.298798Z"
+     "end_time": "2020-10-21T14:42:23.409382Z",
+     "start_time": "2020-10-21T14:42:21.735112Z"
     }
    },
    "outputs": [
@@ -156,18 +156,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'count(*)': 46558}]\n",
-      "[{'count(DISTINCT question)': 43849}]\n",
-      "\u001b[94mreddit    \u001b[0mWhat the heck is Steampunk anyway ?\n",
-      "\u001b[94mreddit    \u001b[0mAutodidact2@lgbt \"Who opposes gay rights? Muslims and Russians.\"\n",
-      "\u001b[94mreddit    \u001b[0mWeekly /r/Gamecube Discussion (October 18, 2020) - What have you been playing, and what do you think of it?\n",
-      "\u001b[94mreddit    \u001b[0mHoly grail? (Sealed copy of skies of Arcadia)\n",
-      "\u001b[94mreddit    \u001b[0mWhy are the Pearl White controllers so expensive in the US?\n",
-      "\u001b[94mreddit    \u001b[0mPossible to fix wanky RGB SCART cable?\n",
-      "\u001b[94mreddit    \u001b[0mWhy doesnt skies of Arcadia have a strip seal. Almost every GameCube game in Europe either has a strip or a red strip seal, so why doesnt this game ?\n",
-      "\u001b[94mreddit    \u001b[0mGC had these decals now it’s darker around the edges, any advice on restoring?\n",
-      "\u001b[94mreddit    \u001b[0mDoes anyone have a copy of Splinter Cell Chaos Theory who can give me the case & manual (no discs) for a few bucks?\n",
-      "\u001b[94mreddit    \u001b[0mCan you convince me to not sell my Wavebird controller?\n"
+      "[{'count(*)': 48858}]\n",
+      "[{'count(DISTINCT question)': 45956}]\n",
+      "\u001b[94mreddit    \u001b[0m  What is this?\n",
+      "\u001b[94mreddit    \u001b[0mHello! Saw this game has been on early access for 5 years now, how are things going?\n",
+      "\u001b[94mreddit    \u001b[0mIs it possible for me to boof semen?\n",
+      "\u001b[94mreddit    \u001b[0mLeast vandalistic tag ever? Post-it bandit...\n",
+      "\u001b[94mreddit    \u001b[0mDoes this count?\n",
+      "\u001b[94mreddit    \u001b[0mGeez, I was happy to find this place, but they havent restocked the cookies in 3 years, so whats the point?\n",
+      "\u001b[94mreddit    \u001b[0mAre there any cookies left?\n",
+      "\u001b[94mreddit    \u001b[0mCan someone fix the header already?\n",
+      "\u001b[94mreddit    \u001b[0mAnother leak, perhaps?\n",
+      "\u001b[94mreddit    \u001b[0mHow did you find SecretSubreddit?\n"
      ]
     }
    ],
