ReAdded secrets.py

--- a/Business_Model.ipynb
+++ b/Business_Model.ipynb
@@ -144,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-21T14:42:23.409382Z",
-     "start_time": "2020-10-21T14:42:21.735112Z"
+     "end_time": "2020-10-21T15:09:40.390318Z",
+     "start_time": "2020-10-21T15:09:39.345502Z"
     }
    },
    "outputs": [
@@ -156,18 +156,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'count(*)': 48858}]\n",
-      "[{'count(DISTINCT question)': 45956}]\n",
-      "\u001b[94mreddit    \u001b[0m  What is this?\n",
-      "\u001b[94mreddit    \u001b[0mHello! Saw this game has been on early access for 5 years now, how are things going?\n",
-      "\u001b[94mreddit    \u001b[0mIs it possible for me to boof semen?\n",
-      "\u001b[94mreddit    \u001b[0mLeast vandalistic tag ever? Post-it bandit...\n",
-      "\u001b[94mreddit    \u001b[0mDoes this count?\n",
-      "\u001b[94mreddit    \u001b[0mGeez, I was happy to find this place, but they havent restocked the cookies in 3 years, so whats the point?\n",
-      "\u001b[94mreddit    \u001b[0mAre there any cookies left?\n",
-      "\u001b[94mreddit    \u001b[0mCan someone fix the header already?\n",
-      "\u001b[94mreddit    \u001b[0mAnother leak, perhaps?\n",
-      "\u001b[94mreddit    \u001b[0mHow did you find SecretSubreddit?\n"
+      "[{'count(*)': 49177}]\n",
+      "[{'count(DISTINCT question)': 46238}]\n",
+      "\u001b[94mreddit    \u001b[0mA bot that, whenever someone says America but does not say freedom in a comment, responds with \"YOU SAY AMERICA BUT DONT MENTION FREEDOM?!\"\n",
+      "\u001b[94mreddit    \u001b[0mDoes Kamil have meningitis?\n",
+      "\u001b[94mreddit    \u001b[0mWhat are the major opportunities and drivers for growth of embedded system market in next 5 years ?\n",
+      "\u001b[94mreddit    \u001b[0mWhat are the drivers and opportunities for the medical alert systems market?\n",
+      "\u001b[94mreddit    \u001b[0mWhich end users are expected to drive the growth of the Automated Optical Inspection System market in the next 5 years?\n",
+      "\u001b[94mreddit    \u001b[0mWhat is the future valuation of global EMI Shielding market?\n",
+      "\u001b[94mreddit    \u001b[0mWhat is the potential opportunity for plant asset management market by 2024?\n",
+      "\u001b[94mreddit    \u001b[0m\"And a shepherd from a nearby village came to see the newborn Lord Jesus, and the shepherd looked into the manger to worship Him; and when he saw the face of the baby Messiah he said to Mary, Is this it? I thought He would be glowing or something. What a \n",
+      "\u001b[94mreddit    \u001b[0mhumans! why should we not eat you? you eat others too! tell us our mistake!\n",
+      "\u001b[94mreddit    \u001b[0mWho said there is an equivocation? Its an analogy.\n"
      ]
     }
    ],
