Created Website Update Scipts

--- a/Business_Model.ipynb
+++ b/Business_Model.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-06T15:13:29.701463Z",
@@ -64,7 +64,7 @@
     "youtube_requests_per_minute = 50000/(24*60)\n",
     " \n",
     "sentences_per_day = (60*24)*(reddit_requests_per_minute + twitter_requests_per_minute + youtube_requests_per_minute) \n",
-    "memory_needed_per_day = sentences_per_day * (bytes_per_sentence + metadata_per_sentence) \n",
+    "memory_needed_per_day = sentences_per_day * (bytes_per_sentence + bytes_per_sentence_metadata) \n",
     "memory_needed_per_year = 365 * memory_needed_per_day\n",
     "\n",
     "print(memory_needed_per_year)\n"
@@ -106,49 +106,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-06T15:12:37.967432Z",
      "start_time": "2020-10-06T15:12:37.939865Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "words_per_sentence                         20\n",
-      "character_per_word                          4\n",
-      "bytes_per_sentence                         80\n",
-      "metadata_per_sentence                      80\n",
-      "reddit_api_call_limit                      60\n",
-      "twitter_api_call_limit                     60\n",
-      "youtube_api_call_limit                     60\n",
-      "sentences_per_day                      179600\n",
-      "memory_needed_per_day                28736000\n",
-      "memory_needed_per_year            10488640000\n",
-      "bytes_per_sentence_metadata                80\n",
-      "reddit_requests_per_minute                 30\n",
-      "twitter_requests_per_minute                60\n",
-      "youtube_requests_per_minute                35\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "comment_out = ''' \n",
     "for k,v in locals().items(): \n",
     "    if '__' not in k and 'pdb' not in k and not k[0] == '_' \\\n",
     "    and isinstance(v, (int, float)): \n",
-    "        print('{:<30}{:>15}'.format(k, round(v)))"
+    "        print('{:<30}{:>15}'.format(k, round(v)))\n",
+    "        '''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-21T15:09:40.390318Z",
-     "start_time": "2020-10-21T15:09:39.345502Z"
+     "end_time": "2020-10-21T15:45:38.376824Z",
+     "start_time": "2020-10-21T15:45:37.185429Z"
     }
    },
    "outputs": [
@@ -156,18 +137,108 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'count(*)': 49177}]\n",
-      "[{'count(DISTINCT question)': 46238}]\n",
-      "\u001b[94mreddit    \u001b[0mA bot that, whenever someone says America but does not say freedom in a comment, responds with \"YOU SAY AMERICA BUT DONT MENTION FREEDOM?!\"\n",
-      "\u001b[94mreddit    \u001b[0mDoes Kamil have meningitis?\n",
-      "\u001b[94mreddit    \u001b[0mWhat are the major opportunities and drivers for growth of embedded system market in next 5 years ?\n",
-      "\u001b[94mreddit    \u001b[0mWhat are the drivers and opportunities for the medical alert systems market?\n",
-      "\u001b[94mreddit    \u001b[0mWhich end users are expected to drive the growth of the Automated Optical Inspection System market in the next 5 years?\n",
-      "\u001b[94mreddit    \u001b[0mWhat is the future valuation of global EMI Shielding market?\n",
-      "\u001b[94mreddit    \u001b[0mWhat is the potential opportunity for plant asset management market by 2024?\n",
-      "\u001b[94mreddit    \u001b[0m\"And a shepherd from a nearby village came to see the newborn Lord Jesus, and the shepherd looked into the manger to worship Him; and when he saw the face of the baby Messiah he said to Mary, Is this it? I thought He would be glowing or something. What a \n",
-      "\u001b[94mreddit    \u001b[0mhumans! why should we not eat you? you eat others too! tell us our mistake!\n",
-      "\u001b[94mreddit    \u001b[0mWho said there is an equivocation? Its an analogy.\n"
+      "[{'count(*)': 58298}]\n",
+      "[{'count(DISTINCT question)': 54369}]\n",
+      "\u001b[94mreddit    \u001b[0mHey, would anybody mind checking out this game? Thanks!\n",
+      "\u001b[94mreddit    \u001b[0mUpgrade from netcast to webos?\n",
+      "\u001b[94mreddit    \u001b[0mdo we draw fags or not?\n",
+      "\u001b[94mreddit    \u001b[0mSkeptical cat: \"You what?\"\n",
+      "\u001b[94mreddit    \u001b[0m11 days no updates?\n",
+      "\u001b[94mreddit    \u001b[0mwhat was the most shocking thing you heard the quiet kid say?\n",
+      "\u001b[94mreddit    \u001b[0m\"the signal\" all gekeken?\n",
+      "\u001b[94mreddit    \u001b[0mTreatment for endo after surgery?\n",
+      "\u001b[94mreddit    \u001b[0mSo is this sub even active anymore?\n",
+      "\u001b[94mreddit    \u001b[0mFollicular Phase BBT?\n",
+      "\u001b[94mreddit    \u001b[0mFriends who are ttc?\n",
+      "\u001b[94mreddit    \u001b[0mHow do I \"give it to God\" when I need to chart?\n",
+      "\u001b[94mreddit    \u001b[0mAnyone try TempDrop?\n",
+      "\u001b[94mreddit    \u001b[0mQuestionable conceiving advice?\n",
+      "\u001b[94mreddit    \u001b[0mAny experience with anti-phospholipid syndrome (APS) or heparin/lovenox during pregnancy?\n",
+      "\u001b[94mreddit    \u001b[0mHow to support my (currently childless) friends?\n",
+      "\u001b[94mreddit    \u001b[0mAre you a college student with high school e-learning experiences?\n",
+      "\u001b[94mreddit    \u001b[0mSibley hall internet access?\n",
+      "\u001b[94mreddit    \u001b[0mTired Studying?\n",
+      "\u001b[94mreddit    \u001b[0mI have been accepted in Confederation College Film Production program. how is it? experienced people please share your experience\n",
+      "\u001b[94mreddit    \u001b[0mDifficulties paying back OSAP?\n",
+      "\u001b[94mreddit    \u001b[0m@LionsbridgeFC: @USLLeagueTwo Can confirm. He’s fantastic. Remember this? https://t.co/moh6r7QDFn\n",
+      "\u001b[94mreddit    \u001b[0mAny good transformation stories from darkness retreats?\n",
+      "\u001b[94mreddit    \u001b[0mDarkness retreat in USA?\n",
+      "\u001b[94mreddit    \u001b[0mWhat is your favorite darkroom retreat?\n",
+      "\u001b[94mreddit    \u001b[0mDMT ‘Hallucinations’ or Expansion of the Spectrum?\n",
+      "\u001b[94mreddit    \u001b[0mIn an upside down world, how do you deal with a male coworker who is everyones favourite but actually a devil playing politics?\n",
+      "\u001b[94mreddit    \u001b[0mWho touches it, really?\n",
+      "\u001b[94mreddit    \u001b[0mSo is this Subreddit dead? :(\n",
+      "\u001b[94mreddit    \u001b[0mBest keylogger for Mac?\n",
+      "\u001b[94mreddit    \u001b[0mI want to download a keylogger. Help me out?\n",
+      "\u001b[94mreddit    \u001b[0mWhy is this subreddit empty? Am I violating some reddit rule by posting here?\n",
+      "\u001b[94mreddit    \u001b[0mHelp me identify this SVT-40? Inherited from my late father, family member interested in buying it, would like to know exactly what it is/worth.\n",
+      "\u001b[94mreddit    \u001b[0mAnyone know where to buy SOVIET svt mags in Canada?\n",
+      "\u001b[94mreddit    \u001b[0mWhere in Canada can you buy the gas adjustment tool?\n",
+      "\u001b[94mreddit    \u001b[0mDoes anyone read this?\n",
+      "\u001b[94mreddit    \u001b[0mAnyone know where I can find SVT blueprints?\n",
+      "\u001b[94mreddit    \u001b[0mAnyone hearing rumors for 2020 LineUp?\n",
+      "\u001b[94mreddit    \u001b[0m  Video Stream?\n",
+      "\u001b[94mreddit    \u001b[0mUpdates on security?\n",
+      "\u001b[94mreddit    \u001b[0mCan you sleep in your car with a parking pass?\n",
+      "\u001b[94mreddit    \u001b[0mCheap campgrounds near bethel?\n",
+      "\u001b[94mreddit    \u001b[0mPhil Lesh and Friends! Who will the friends be? Will he pick from the other bands at the festival to start a supergroup for the night?\n",
+      "\u001b[94mreddit    \u001b[0mWill the PS110 support 750hz displays?\n",
+      "\u001b[94mreddit    \u001b[0mPro 2A Tactical - Good or Bad?\n",
+      "\u001b[94mreddit    \u001b[0mScope mount with rails for an old rifle? (Haenel 312)\n",
+      "\u001b[94mreddit    \u001b[0mBest iron sight options for sig p365 xl?\n",
+      "\u001b[94mreddit    \u001b[0mDoes anyone have any recommendations for a safe?\n",
+      "\u001b[94mreddit    \u001b[0mWhats the hype about G10 Grips??\n",
+      "\u001b[94mreddit    \u001b[0mCheap and fun targets? Walmart brand 12 pack of soda!\n",
+      "\u001b[94mreddit    \u001b[0mWhat Do You Guys Think?\n",
+      "\u001b[94mreddit    \u001b[0mWhat Age Did You Buy Your First Gun?\n",
+      "\u001b[94mreddit    \u001b[0mYildiz TK-12 - Slugs okay?\n",
+      "\u001b[94mreddit    \u001b[0mShe’s making Music Now? I hope she Sings, & doesn’t Rap. She probably has a beautiful voice.....\n",
+      "\u001b[94mreddit    \u001b[0mis there any pornstar similar to her ?\n",
+      "\u001b[94mreddit    \u001b[0mWhats more annoying on this sub?\n",
+      "\u001b[94mreddit    \u001b[0mCock and ball torture?\n",
+      "\u001b[94mreddit    \u001b[0mWhats your preference?\n",
+      "\u001b[94mreddit    \u001b[0mWhats the price of a mile?\n",
+      "\u001b[94mreddit    \u001b[0mWould you the what the are the when???\n",
+      "\u001b[94mreddit    \u001b[0m           yes?\n",
+      "\u001b[94mreddit    \u001b[0mWould you rather?\n",
+      "\u001b[94mreddit    \u001b[0mWould you rather?????\n",
+      "\u001b[94mreddit    \u001b[0mWould you rather?\n",
+      "\u001b[94mreddit    \u001b[0mDoes anyone own discord?\n",
+      "\u001b[94mreddit    \u001b[0mAnyone out there in production with Shop Floor Connect?\n",
+      "\u001b[94mreddit    \u001b[0mGot a zip tie? Fold it backwards so it doesnt lock and you have an adjustable Joint/Roach clip.\n",
+      "\u001b[94mreddit    \u001b[0mwhat happens if you remove the base os?\n",
+      "\u001b[94mreddit    \u001b[0mIs it possible to run bedrock with solus?\n",
+      "\u001b[94mreddit    \u001b[0mEnabling services across strata?\n",
+      "\u001b[94mreddit    \u001b[0mHow to add stratum from an .iso?\n",
+      "\u001b[94mreddit    \u001b[0mHow to use pacman as pkg manager in void linux ?\n",
+      "\u001b[94mreddit    \u001b[0mHow do I remove Bedrock Linux?\n",
+      "\u001b[94mreddit    \u001b[0mAny pictures of your WorkPlace? Any stories about something interesting at Work? Post it here!\n",
+      "\u001b[94mreddit    \u001b[0mSo where does everyone work?\n",
+      "\u001b[94mreddit    \u001b[0mNot thinking straight, will someone please read my paper outline and help me clear my thoughts?\n",
+      "\u001b[94mreddit    \u001b[0m\"how many actual chromosomes do you have in your head, Opus?\"\n",
+      "\u001b[94mreddit    \u001b[0m\"lol joe you missed a golden opportunity, Stephen Hawking died... hahaha minus one eve pod right?\"\n",
+      "\u001b[94mreddit    \u001b[0m\"wait, if they collapse, who will HK have to fight? ... wait, who is the dagger\"?\n",
+      "\u001b[94mreddit    \u001b[0mBest factions server???\n",
+      "\u001b[94mreddit    \u001b[0mBAD IDEA - The Emoji Movie - Worst film ever??\n",
+      "\u001b[94mreddit    \u001b[0mDo women love beards or hate beards?\n",
+      "\u001b[94mreddit    \u001b[0mLara Logan: Why Does Antifa Hate Andy Ngo?\n",
+      "\u001b[94mreddit    \u001b[0mRemind you of a certain group?\n",
+      "\u001b[94mreddit    \u001b[0mHow fast are current programs computationally verifying the Collatz conjecture?\n",
+      "\u001b[94mreddit    \u001b[0mHow far has Collatz conjecture been computationally verified?\n",
+      "\u001b[94mreddit    \u001b[0mWhy is this not a proof of the Collatz conjecture?\n",
+      "\u001b[94mreddit    \u001b[0mIs there anybody here?\n",
+      "\u001b[94mreddit    \u001b[0mSo.. anyone able to set up an OmniFob?\n",
+      "\u001b[94mreddit    \u001b[0mWhat the fuck, this isnt Stars of the Lid?\n",
+      "\u001b[94mreddit    \u001b[0mWhat does SoTL Mean to You?\n",
+      "\u001b[94mreddit    \u001b[0mIMMW: How much time have I spent on reddit?\n",
+      "\u001b[94mreddit    \u001b[0mAccess to mental health services?\n",
+      "\u001b[94mreddit    \u001b[0mDo you want to be heard by an empathetic listener? Join our voice bot beta test: bit.ly/talktobitbybit\n",
+      "\u001b[94mreddit    \u001b[0mYour experience in mental hospital?\n",
+      "\u001b[94mreddit    \u001b[0mWHATS IN YOUR MOUTH CHALLENGE!?!? (GONE DiRtY)\n",
+      "\u001b[94mreddit    \u001b[0mCould Psychedelic Drugs Help smokers quit? BBC\n",
+      "\u001b[94mreddit    \u001b[0mWheaton il? Im a guitarist/vocalist looking for a bassist and a drummer\n",
+      "\u001b[94mreddit    \u001b[0mDid my African Dwarf Frogs lay eggs/tadpole sacks?\n",
+      "\u001b[94mreddit    \u001b[0mWhy didnt Kylo know where to find Luke?\n"
      ]
     }
    ],
@@ -194,7 +265,7 @@
     "def get_recent_scrapes(db):\n",
     "    db.cursor.execute('''SELECT * FROM `scrapes` \n",
     "                     ORDER BY Timestamp DESC\n",
-    "                     LIMIT 10 \n",
+    "                     LIMIT 100 \n",
     "                      ''')\n",
     "    return db.cursor.fetchall()\n",
     "\n",
@@ -220,34 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-20T02:58:15.546554Z",
-     "start_time": "2020-10-20T02:56:29.437475Z"
+     "end_time": "2020-10-21T21:23:09.804542Z",
+     "start_time": "2020-10-21T21:23:09.746720Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'id': 33469, 'question': 'Are You Fucking Kidding Me Right Now?', 'website': 'reddit', 'topic': '2b2t', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33470, 'question': 'Cryptocurrency - is this the end game for fintech?', 'website': 'reddit', 'topic': 'cryptochat', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33471, 'question': 'Chinas ICO bans - what befalls the world of cryptocurrencies?', 'website': 'reddit', 'topic': 'cryptochat', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33472, 'question': 'Is the consensus still that cloud mining is a scam?', 'website': 'reddit', 'topic': 'cryptochat', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33473, 'question': 'Comment active est ce subreddit ?', 'website': 'reddit', 'topic': 'canada_fr', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33474, 'question': 'Anyone know how far the new water pipe is running on Lovett?', 'website': 'reddit', 'topic': 'CityofCentral', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33475, 'question': 'Dream house or nope house? • /r/pics', 'website': 'reddit', 'topic': 'IdeaInspire', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 56, 48)}, {'id': 33461, 'question': 'Can we merge Accumulo and Hadoop back together?', 'website': 'reddit', 'topic': 'Accumulo', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 55, 46)}, {'id': 33462, 'question': 'How did you learn to read and type?', 'website': 'reddit', 'topic': 'TalkToDolphins', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 55, 46)}, {'id': 33463, 'question': 'Do you have a favorite flavor of water?', 'website': 'reddit', 'topic': 'TalkToDolphins', 'version': '0.0.0.0', 'timestamp': datetime.datetime(2020, 10, 19, 19, 55, 46)}]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-25c10d6f8a48>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mrun_periodically\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-11-25c10d6f8a48>\u001b[0m in \u001b[0;36mrun_periodically\u001b[0;34m(wait_time)\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mclear_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mget_recent_scrapes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mrun_periodically\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
     "\n",
@@ -255,9 +306,7 @@
     "    while True: \n",
     "        clear_output(wait=True)\n",
     "        print(get_recent_scrapes())\n",
-    "        time.sleep(wait_time)\n",
-    "    \n",
-    "run_periodically(60)"
+    "        time.sleep(wait_time)\n"
    ]
   },
   {
